--- a/[ATLAS] Modificar.yml
+++ b/[ATLAS] Modificar.yml
@@ -40,9 +40,9 @@
       user: "{{ username }}"
     when: admin|string == "SI"
 
-#   - name: No es admin 
-#     ipasudorule:
-#       ipaadmin_password: techadmin1234
-#       name: test
-#       user: ""
-#     when: "{{ admin }} == NO"
+  - name: No es admin 
+    ipasudorule:
+      ipaadmin_password: techadmin1234
+      name: test
+      user: ""
+    when: admin|string == "NO"
