--- a/[ATLAS] Modificar.yml
+++ b/[ATLAS] Modificar.yml
@@ -44,5 +44,5 @@
     ipasudorule:
       ipaadmin_password: techadmin1234
       name: test
-      user: ""
+      user: 
     when: admin|string == "NO"
