--- a/[ATLAS] Alta.yml
+++ b/[ATLAS] Alta.yml
@@ -13,7 +13,7 @@
       first: "{{ nombre }}"
       last: "{{ apellido }}"
       password: "{{ pass }}"
-      update_password: on_create
+#      update_password: on_create
       
   - name: Definición de privilegios de administrador.
     ipagroup:
