--- a/[ATLAS] Alta.yml
+++ b/[ATLAS] Alta.yml
@@ -12,7 +12,8 @@
       name: "{{ username }}"
       first: "{{ nombre }}"
       last: "{{ apellido }}"
-#      password: "{{ pass }}"
+      password: "{{ pass }}"
+      passwordexpiration: 2000-01-01
 #      update_password: on_create
       
   - name: Definición de privilegios de administrador.
