--- a/[ATLAS] Alta.yml
+++ b/[ATLAS] Alta.yml
@@ -18,6 +18,7 @@
 
   - ipauser:
       ipaadmin_password: techadmin1234
+      name: "{{ username }}"
       passwordexpiration: 2000-01-01
     when: passchg|string == "SI"
       
