--- a/[ATLAS] Modificar.yml
+++ b/[ATLAS] Modificar.yml
@@ -32,6 +32,7 @@
       userauthtype: password
       password: "{{ pass }}"
       update_password: always
+      passwordexpiration: 2000-01-01
     when:  chpass|string == "SI"
 
   - name: Es admin
