--- a/[ATLAS] Modificar.yml
+++ b/[ATLAS] Modificar.yml
@@ -32,7 +32,7 @@
       userauthtype: password
       password: "{{ pass }}"
       passwordexpiration: 2010-01-01
-      update_password: always
+      update_password: on_create
     when:  chpass|string == "SI"
 
   - name: Es admin
