--- a/[ATLAS] Modificar.yml
+++ b/[ATLAS] Modificar.yml
@@ -25,8 +25,16 @@
       name: "{{ username }}"
       userauthtype: otp
       password: "{{ pass }}"
-      passwordexpiration: 2010-01-01
       update_password: always
+    when:  chpass|string == "SI"
+    
+  - name: pedir pass al ingresar .
+    ipauser:
+      ipaadmin_password: techadmin1234
+      name: "{{ username }}"
+      userauthtype: otp
+      passwordexpiration: 2010-01-01
+      update_password: on_create
     when:  chpass|string == "SI"
 
   - name: Es admin
